# Labs

lab1/: lab1.cpp  lab1.h  main  main.cpp
lab2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  covr.googletest_googlemock_include_gmock_gmock-cardinalities.h.html  covr.googletest_googlemock_include_gmock_gmock-matchers.h.html  covr.googletest_googlemock_include_gmock_gmock-spec-builders.h.html  covr.googletest_googlemock_include_gmock_internal_gmock-internal-utils.h.html  covr.googletest_googlemock_src_gmock-cardinalities.cc.html  covr.googletest_googlemock_src_gmock-internal-utils.cc.html  covr.googletest_googlemock_src_gmock-matchers.cc.html  covr.googletest_googlemock_src_gmock-spec-builders.cc.html  covr.googletest_googlemock_src_gmock.cc.html  covr.googletest_googlemock_src_gmock_main.cc.html  covr.googletest_googletest_include_gtest_gtest-matchers.h.html  covr.googletest_googletest_include_gtest_gtest-message.h.html  covr.html  covr.lab2.cpp.html  file2.cpp  (+26 more)
lab3/: CMakeLists.txt  cards.cpp  function.cpp  lab3.h  main  main.cpp  test  test.cpp
lab3/lab3_dinamic/: cards.cpp  function.cpp  lab3_din.h  main.cpp  test.cpp
lab3/lab3_dinamic/bild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  test
lab3/lab3_static/: CMakeCache.txt  Makefile  cards.cpp  cmake_install.cmake  lab3.h  main  test
lab4/: Agency.cpp  Agency.h  CMakeCache.txt  CMakeLists.txt  Descriptor.cpp  Descriptor.h  Function.cpp  Makefile  Print.cpp  Print.h  Radio.cpp  Radio.h  Tele.cpp  Tele.h  cmake_install.cmake  main  main.cpp  pobg.h  test  test.cpp
(+15 files in other folders)
